--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,21 +1,26 @@
 [toolchain]
 
 [features]
-seeds = false
+resolution = true
 skip-lint = false
 
 [programs.localnet]
-locker = "2r5VekMNiWPzi1pWwvJczrdPaZnJG59u91unSrTunwJg"
+locker = "7MtLZR3qwqBd39WvRNmyjAL5QbF52YG1cJUpgjHWBXaT"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "keys/localnet/admin-bossj3JvwiNK7pvjr149DqdtJxf2gdygbcmEPTkb2F1.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[test]
+startup_wait = 5000
+shutdown_wait = 2000
+upgradeable = false
 
 [[test.genesis]]
 address = "EBZDYx7599krFc4m2govwBdZcicr4GgepqC78m71nsHS"
